@@ -53,6 +53,32 @@ def make_row(label, field):
     label = html.escape(label)
     return ROW_TEMPLATE % {"label": label, "field": field}
 
+def make_stop_form(stopURL):
+    data = """<form action="%s" class='command stopbuild'>
+      <p>To stop this build, fill out the following fields and
+      click the 'Stop' button</p>\n""" % stopURL
+    data += make_row("Your name:",
+                     "<input type='text' name='username' />")
+    data += make_row("Reason for stopping build:",
+                     "<input type='text' name='comments' />")
+    data += '<input type="submit" value="Stop Builder" /></form>\n'
+    return data
+
+def make_force_build_form(forceURL):
+    data = """<form action="%s" class="command forcebuild">
+      <p>To force a build, fill out the following fields and
+      click the 'Force Build' button</p>""" % forceURL
+    return (data
+      + make_row("Your name:",
+                 "<input type='text' name='username' />")
+      + make_row("Reason for build:",
+                 "<input type='text' name='comments' />")
+      + make_row("Branch to build:",
+                 "<input type='text' name='branch' />")
+      + make_row("Revision to build:",
+                 "<input type='text' name='revision' />")
+      + '<input type="submit" value="Force Build" /></form>\n')
+
 colormap = {
     'green': '#72ff75',
     }
@@ -149,7 +175,7 @@ class Box:
         if parms.has_key('show_idle'):
             del parms['show_idle']
             self.show_idle = 1
-            
+
         self.parms = parms
         # parms is a dict of HTML parameters for the <td> element that will
         # represent this Event in the waterfall display.
